--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,27 +24,29 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
-main {
+body main {
   width: 450px;
-  padding-top: 100px;
-  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 80px;
   margin-right: auto;
   margin-left: auto;
   background: white;
 }
 
-h2 {
+body main h2 {
   border-bottom: 1px solid black;
   margin-right: 10px;
   margin-left: 10px;
+  padding-top: 5px;
 }
 
-form {
+main section form {
   margin-right: 10px;
   margin-left: 10px;
 }
 
-textarea {
+main section form textarea {
   width: 100%;
   padding: 0.2em;
 }
