--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,10 +1,12 @@
 #nav-bar{
+  top: 0;
+  position: fixed;
   height: 80px;
   width: 100%;
   background: #00a087;
-  position: fixed;
   padding-right: 2em;
   padding-left: 2em;
+  z-index: 1;
 }
 #nav-bar .header{
   float: left;
@@ -20,3 +22,5 @@
   height: 80px;
   margin-right: 10px;
 }
+
+
