done jquery and ajax

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,14 +1,37 @@
-.new-tweet {
+.container .new-tweet {
   background: #CFCFCF;
-  height: 135px;
   margin-top: 20px;
   margin-right: 20px;
   margin-bottom: 20px;
   margin-left: 20px;
   border-radius: 15px;
+  padding-bottom: 10px;
 }
 
 .counter {
   float: right;
   line-height: 24px;
+}
+
+.error {
+    padding: 20px;
+    margin: 10px;
+    background-color: #FFB6B6;
+    color: white;
+    display: none;
+}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closebtn:hover {
+    color: black;
 }
