--- a/public/styles/post-tweet.css
+++ b/public/styles/post-tweet.css
@@ -36,6 +36,11 @@
   margin-right: 10px;
   margin-left: 10px;
   margin-bottom: 100px;
+  width: auto;
+}
+
+.tweet-content {
+  word-wrap: break-word;
 }
 
 .tweet-footer {
