--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -23,4 +23,14 @@
   margin-right: 10px;
 }
 
+#nav-bar .composeButton{
+  float: right;
+  background: #CFCFCF;
+  border-radius: 10px;
+  width: 100px;
+  display: inline-block;
+  line-height: 50px;
+  margin-top: 12px;
+}
+
 
