--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,14 +31,15 @@ body main {
   margin-top: 80px;
   margin-right: auto;
   margin-left: auto;
-  background: white;
+  background: #585E5C;
 }
 
 body main h2 {
-  border-bottom: 1px solid black;
+  border-bottom: 2px solid #eee;
   margin-right: 10px;
   margin-left: 10px;
   padding-top: 5px;
+  color: white;
 }
 
 main section form {
