--- a/public/styles/post-tweet.css
+++ b/public/styles/post-tweet.css
@@ -1,5 +1,5 @@
 .posted-tweet {
-  background: #CFCFCF;
+  background: #E69B03;
   height: auto;
   margin-top: 20px;
   margin-right: 20px;
@@ -9,7 +9,7 @@
 }
 
 .tweet-header {
-  background: #EDEDED;
+  background: #DBCEA7;
   height: 50px;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
@@ -45,7 +45,7 @@
 
 .tweet-footer {
   padding-left: 10px;
-  border-top: 1px solid black;
+  border-top: 2px solid #eee;;
 }
 
 .tweet-footer .like {
